update app & add swagger
