# src/app.ts
@@ -6,7 +6,7 @@ import YAML from 'yamljs';
 import cookieParser from 'cookie-parser'
 import morgan from 'morgan';
 import { DIContainer } from './infrastructure/di/DIContainer';
-import { AuthRouter, CategoryRouter, OpeningHoursRouter, ProductRouter } from './presentation/router/index';
+import { AuthRouter, CategoryRouter, OpeningHoursRouter, ProductRouter, VideoRouter } from './presentation/router/index';
 import path from "path";
 // import { CleanupUnverifiedAccounts } from './infrastructure/services/CleanupUnverifiedAccounts';
 
@@ -88,6 +88,10 @@ export class App {
 
     const openingHoursRouter = new OpeningHoursRouter();
     this.app.use('/api/opening-hours', openingHoursRouter.getRouter());
+
+
+    const videoRouter = new VideoRouter();
+    this.app.use('/api/videos',videoRouter.getRouter())
 
     this.app.use((req: Request, res: Response) => {
       res.status(404).json({
